# pegasus_gazebo_plugins

./: CMakeLists.txt  README.md  package.xml
include/pegasus_gazebo_plugins/: closed_loop_plugin.h
src/: closed_loop_plugin.cpp
